--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{title}}</title>
+    <title>{{{title}}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -41,7 +41,7 @@
 
   <body data-spy="scroll" data-target=".bs-docs-sidebar">
 
-    <!-- Navbar
+ <!-- Navbar
     ================================================== -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -51,29 +51,26 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="./index.html">Bootstrap</a>
+          <a class="brand" href="./index.php">ATWSS</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="{{index}}">
-                <a href="./index.html">{{_i}}Home{{/i}}</a>
+              <li>
+                <a href="./">ATWSS</a>
               </li>
-              <li class="{{getting-started}}">
-                <a href="./getting-started.html">{{_i}}Get started{{/i}}</a>
+              <li>
+                <a href="./introduction.php">Introduction</a>
               </li>
-              <li class="{{scaffolding}}">
-                <a href="./scaffolding.html">{{_i}}Scaffolding{{/i}}</a>
+              <li>
+                <a href="./equipment.php">Equipment</a>
               </li>
-              <li class="{{base-css}}">
-                <a href="./base-css.html">{{_i}}Base CSS{{/i}}</a>
+              <li>
+                <a href="./videos.php">Videos</a>
               </li>
-              <li class="{{components}}">
-                <a href="./components.html">{{_i}}Components{{/i}}</a>
+              <li>
+                <a href="./dosimeters.php">Dosimeters</a>
               </li>
-              <li class="{{javascript}}">
-                <a href="./javascript.html">{{_i}}JavaScript{{/i}}</a>
-              </li>
-              <li class="{{customize}}">
-                <a href="./customize.html">{{_i}}Customize{{/i}}</a>
+              <li>
+                <a href="./people.php">People</a>
               </li>
             </ul>
           </div>
@@ -82,8 +79,6 @@
     </div>
 
 {{>body}}
-
-
 
     <!-- Footer
     ================================================== -->
