--- a/templates/pages/interventions.mustache
+++ b/templates/pages/interventions.mustache
@@ -30,7 +30,7 @@
 			 		<td>none</td>
 			 		<td>
             	    	{{#videos}}
-<video id="movie" width="320" height="240" preload controls>
+<video id="movie" width="320" height="240" controls>
   <source src="{{id}}.webm" type="video/webm; codecs=vp8,vorbis" />
   <source src="{{id}}.mp4" />
   <object width="320" height="240" type="application/x-shockwave-flash"
