Added Plot URLs

--- a/templates/pages/interventions.mustache
+++ b/templates/pages/interventions.mustache
@@ -26,8 +26,8 @@
 			<tbody>
 				{{#interventions}}
 				<tr>
-			 		<td>{{id}}</td>
-			 		<td>none</td>
+			 		<td>Intervention {{id}}</td>
+			 		<td><a href="http://atlas.web.cern.ch/Atlas/TCOORD/CavCom/plot.php?InterventionID={{id}}">Plots</a></td>
 			 		<td>
             	    	{{#videos}}
 <video id="movie" width="320" height="240" controls>
