--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -24,7 +24,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
       <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
                     <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="assets/ico/favicon.png">
+                           <link rel="icon" type="image/png" href="img/favicon.png">
   </head>
 
   <body data-spy="scroll" data-target=".bs-docs-sidebar">
@@ -39,25 +39,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="./index.php">ATWSS</a>
+          <a class="brand" href="./index.php"><img src="img/favicon.png">ATWSS</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li>
-                <a href="./">ATWSS</a>
-              </li>
-              <li>
+              <li class="{{introduction}}">
                 <a href="./introduction.php">Introduction</a>
               </li>
-              <li>
+              <li class="{{equipment}}">
                 <a href="./equipment.php">Equipment</a>
               </li>
-              <li>
+              <li class="{{interventions}}">
                 <a href="./interventions.php">Interventions</a>
               </li>
-              <li>
+              <li class="{{dosimeters}}">
                 <a href="./dosimeters.php">Dosimeters</a>
               </li>
-              <li>
+              <li class="{{people}}">
                 <a href="./people.php">People</a>
               </li>
             </ul>
