mime type for mp4

--- a/templates/pages/interventions.mustache
+++ b/templates/pages/interventions.mustache
@@ -32,7 +32,7 @@
             	    	{{#videos}}
 <video id="movie" width="320" height="240" controls>
   <source src="{{id}}.webm" type="video/webm; codecs=vp8,vorbis" />
-  <source src="{{id}}.mp4" />
+  <source src="{{id}}.mp4" type="video/mp4" />
   <object width="320" height="240" type="application/x-shockwave-flash"
     data="flowplayer-3.2.1.swf">
     <param name="movie" value="flowplayer-3.2.1.swf" />
