--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -78,15 +78,13 @@
     ================================================== -->
     <footer class="footer">
       <div class="container">
-        <p>{{_i}}Designed and built with all the love in the world by <a href="http://twitter.com/mdo" target="_blank">@mdo</a> and <a href="http://twitter.com/fat" target="_blank">@fat</a>.{{/i}}</p>
-        <p>{{_i}}Code licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.{{/i}}</p>
-        <p>{{_i}}<a href="http://glyphicons.com">Glyphicons Free</a> licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.{{/i}}</p>
+        <p>Copyright&copy; 2013 CERN</p>
         <ul class="footer-links">
-          <li><a href="http://blog.getbootstrap.com">{{_i}}Blog{{/i}}</a></li>
+          <li><a href="http://cern.ch">CERN</a></li>
           <li class="muted">&middot;</li>
-          <li><a href="https://github.com/twitter/bootstrap/issues?state=open">{{_i}}Issues{{/i}}</a></li>
+          <li><a href="http://cern.ch/atlas">ATLAS</a></li>
           <li class="muted">&middot;</li>
-          <li><a href="https://github.com/twitter/bootstrap/blob/master/CHANGELOG.md">{{_i}}Changelog{{/i}}</a></li>
+          <li><a href="http://cern.ch/ATWSS">ATWSS</a></li>
         </ul>
       </div>
     </footer>
