--- a/css/ATWSS.css
+++ b/css/ATWSS.css
@@ -26,3 +26,15 @@ body > .navbar li {
 .navbar .nav .dropdown-toggle .caret {
 	margin-top: 14px;
 }
+
+.footer {
+	margin-top: 0;
+	background-color: #D0D0D0;
+	border-top: 1px solid #C0C0C0;
+	padding: 10px 0;
+	text-align: right;
+}
+
+.footer-links {
+    margin: 0;
+}
