--- a/templates/pages/interventions.mustache
+++ b/templates/pages/interventions.mustache
@@ -34,7 +34,7 @@
   <source src="{{id}}.webm" type="video/webm; codecs=vp8,vorbis" />
   <source src="{{id}}.mp4" type="video/mp4" />
   <object width="320" height="240" type="application/x-shockwave-flash"
-    data="flowplayer-3.2.1.swf">
+    data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf">
     <param name="movie" value="flowplayer-3.2.1.swf" />
     <param name="allowfullscreen" value="true" />
     <param name="flashvars" value="config={'clip': {'url': '{{videoURL}}/{{id}}.mp4', 'autoPlay':false, 'autoBuffering':true}}" />
