Added index, dosimeters

--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -12,17 +12,17 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
             <!--
-              <li{% if page.slug == "getting-started" %} class="active"{% endif %}>
+              <li{% if page.slug == "introduction" %} class="active"{% endif %}>
                 <a href="./introduction.php">Introduction</a>
               </li>
-              <li{% if page.slug == "getting-started" %} class="active"{% endif %}>
+              <li{% if page.slug == "equipment" %} class="active"{% endif %}>
                 <a href="./equipment.php">Equipment</a>
               </li>
             -->
-              <li{% if page.slug == "getting-started" %} class="active"{% endif %}>
+              <li{% if page.slug == "intervention" %} class="active"{% endif %}>
                 <a href="./interventions.php">Interventions</a>
               </li>
-              <li{% if page.slug == "getting-started" %} class="active"{% endif %}>
+              <li{% if page.slug == "dosimeters" %} class="active"{% endif %}>
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 Dosimeters
 				  <b class="caret"></b>
