Fixed link to atwss

--- a/docs/_includes/colophon.html
+++ b/docs/_includes/colophon.html
@@ -8,7 +8,7 @@
           <li class="muted">&middot;</li>
           <li><a href="http://cern.ch/atlas">ATLAS</a></li>
           <li class="muted">&middot;</li>
-          <li><a href="http://cern.ch/ATWSS">ATWSS</a></li>
+          <li><a href="http://atwss.cern.ch/">ATWSS</a></li>
         </ul>
       </div>
     </footer>
