--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,12 +13,12 @@
     <!-- Docs page layout -->
 <!-- Subhead
 ================================================== -->
-<header class="jumbotron subhead" id="overview">
+<div class="jumbotron" id="overview">
   <div class="container">
     <h1>{{ page.title }}</h1>
     <p class="lead">{{ page.lead }}</p>
   </div>
-</header>
+</div>
 
 <!--
     <div class="bs-header">
