Fixed #29 and fixed #25

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,21 +13,13 @@
     <!-- Docs page layout -->
 <!-- Subhead
 ================================================== -->
-<div class="jumbotron" id="overview">
+<div class="jumbotron subhead" id="overview">
   <div class="container">
     <h1>{{ page.title }}</h1>
     <p class="lead">{{ page.lead }}</p>
   </div>
 </div>
 
-<!--
-    <div class="bs-header">
-      <div class="container">
-        <h1>{{ page.title }}</h1>
-        <p>{{ page.lead }}</p>
-      </div>
-    </div>
--->
     <div class="container">
       <div class="row">
 <!--
@@ -49,9 +41,7 @@
           </div>
         </div>
 --> 
-       <div class="span12">
-          {{ content }}
-        </div>
+         {{ content }}
       </div>
 
       <!-- Quick back to top -->
