--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -16,7 +16,8 @@
 <header class="jumbotron masthead" id="overview">
   <div class="container">
     <h1>{{ page.title }}</h1>
-    <p class="lead">{{ page.lead }}</p>
+    <p class="lead">{{ page.lead1 }}</p>
+    <p class="lead">{{ page.lead2 }}</p>
   </div>
 </header>
 
