--- a/docs/_includes/interventions.html
+++ b/docs/_includes/interventions.html
@@ -1,4 +1,22 @@
 {% if interventions %}
+
+<?php
+
+require_once('config/oracle.php');
+
+date_default_timezone_set('Europe/Berlin');
+
+$conn = oci_connect($conf['user'], $conf['password'], $conf['host']) or die(oci_error());
+
+$sql = oci_parse($conn, "select * from view_interventions");
+oci_execute($sql) or die(oci_error($sql));
+$nrows = oci_fetch_all($sql, $intervention);
+
+oci_free_statement($sql);
+oci_close($conn);
+
+?>
+
 <table class="table table-hover">
 	<thead>
 		<tr>
@@ -13,11 +31,40 @@
 		{% for intervention in interventions %}
 		<tr>
 			<td>{{ intervention.name }}</td>
-			<td>{{ intervention.title }}</td>
-			<td>{{ intervention.time }}</td>
+			<td><?php echo str_replace(' ','&nbsp;',$intervention['NAME'][{{ intervention.name }}-1]) ?></td>
+			<td><?php echo str_replace(' ','&nbsp;',date("D, d M Y H:i", $intervention['UNIX_START'][{{ intervention.name }}-1])) ?></td>
 			<td>{{ intervention.dosimeters }}</td>
-			<td>{{ intervention.videos }}</td>
-		</tr> {% endfor %}
+			<td>{% for video in intervention.videos %} 
+				<video id="movie"
+					width="320" height="240" controls muted preload="metadata">
+					<source src="{{ video }}.webm" type="video/webm; codecs=vp8,vorbis" />
+					<source src="{{ video }}.mp4" type="video/mp4" />
+					<object width="320" height="240"
+						type="application/x-shockwave-flash"
+						data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf">
+						<param name="movie" value="flowplayer-3.2.1.swf" />
+						<param name="allowfullscreen" value="true" />
+						<param name="flashvars"
+							value="config={'clip': {'url': '{{ videoUrl }}/{{ video }}.mp4', 'autoPlay':false, 'autoBuffering':true}}" />
+						<p>
+							Download video as <a href="{{ video }}.mp4">MP4</a> or <a
+								href="{{ video }}.webm">WebM</a>.
+						</p>
+					</object>
+				</video> 
+				<script>
+					var v = document.getElementById("movie");
+					v.onclick = function() {
+						if (v.paused) {
+							v.play();
+						} else {
+							v.pause();
+						}
+					};
+				</script> {% endfor %}
+			</td>
+		</tr>
+		{% endfor %}
 	</tbody>
 </table>
 {% endif %}
