--- a/docs/_includes/interventions.html
+++ b/docs/_includes/interventions.html
@@ -2,18 +2,7 @@
 
 <?php
 
-require_once('config/oracle.php');
-
 date_default_timezone_set('Europe/Berlin');
-
-$conn = oci_connect($conf['user'], $conf['password'], $conf['host']) or die(oci_error());
-
-$sql = oci_parse($conn, "select * from view_interventions");
-oci_execute($sql) or die(oci_error($sql));
-$nrows = oci_fetch_all($sql, $intervention);
-
-oci_free_statement($sql);
-oci_close($conn);
 
 ?>
 
@@ -31,8 +20,8 @@ oci_close($conn);
 		{% for intervention in interventions %}
 		<tr>
 			<td>{{ intervention.name }}</td>
-			<td><?php echo str_replace(' ','&nbsp;',$intervention['NAME'][{{ intervention.name }}-1]) ?></td>
-			<td><?php echo str_replace(' ','&nbsp;',date("D, d M Y H:i", $intervention['UNIX_START'][{{ intervention.name }}-1])) ?></td>
+			<td><?php echo str_replace(' ','&nbsp;','{{ intervention.title }}') ?></td>
+			<td><?php echo str_replace(' ','&nbsp;',date("D, d M Y H:i", {{ intervention.time }})) ?></td>
 			<td>{{ intervention.dosimeters }}</td>
 			<td>{% for video in intervention.videos %} 
 				<video id="movie"
