--- a/docs/_includes/interventions.html
+++ b/docs/_includes/interventions.html
@@ -1,11 +1,4 @@
 {% if interventions %}
-
-<?php
-
-date_default_timezone_set('Europe/Berlin');
-
-?>
-
 <table class="table table-hover">
 	<thead>
 		<tr>
@@ -20,8 +13,8 @@ date_default_timezone_set('Europe/Berlin');
 		{% for intervention in interventions %}
 		<tr>
 			<td>{{ intervention.name }}</td>
-			<td><?php echo str_replace(' ','&nbsp;','{{ intervention.title }}') ?></td>
-			<td><?php echo str_replace(' ','&nbsp;',date("D, d M Y H:i", {{ intervention.time }})) ?></td>
+			<td>{{ intervention.title }}</td>
+			<td>{{ intervention.time }}</td>
 			<td>{{ intervention.dosimeters }}</td>
 			<td>{% for video in intervention.videos %} 
 				<video id="movie"
