--- a/docs/_includes/colophon.html
+++ b/docs/_includes/colophon.html
@@ -2,7 +2,7 @@
     ================================================== -->
     <footer class="footer">
       <div class="container">
-        <p>Copyright&copy; 2013 CERN</p>
+        <p>Copyright&copy; 2013 CERN, <a href="mailto:Mark.Donszelmann@cern.ch">Mark D&ouml;nszelmann</a></p>
         <ul class="footer-links">
           <li><a href="http://cern.ch">CERN</a></li>
           <li class="muted">&middot;</li>
