--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -12,10 +12,10 @@
 </title>
 
 <!-- Bootstrap core CSS -->
-<link href="assets/css/bootstrap.css" rel="stylesheet">
-<link href="assets/css/docs.css" rel="stylesheet">
+<link href="{{ page.dir }}/assets/css/bootstrap.css" rel="stylesheet">
+<link href="{{ page.dir }}/assets/css/docs.css" rel="stylesheet">
 
-<link href="css/ATWSS.css" rel="stylesheet">
+<link href="{{ page.dir }}/css/ATWSS.css" rel="stylesheet">
 
 {% if page.layout != "example" %}
 <!-- Documentation extras -->
@@ -23,16 +23,16 @@
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
-  <script src="assets/js/html5shiv.js"></script>
-  <script src="assets/js/respond/respond.min.js"></script>
+  <script src="{{ page.dir }}/assets/js/html5shiv.js"></script>
+  <script src="{{ page.dir }}/assets/js/respond/respond.min.js"></script>
 <![endif]-->
 
 <!-- Favicons -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-                <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
-                               <link rel="shortcut icon" href="img/favicon.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ page.dir }}/assets/ico/apple-touch-icon-144-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ page.dir }}/assets/ico/apple-touch-icon-114-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ page.dir }}/assets/ico/apple-touch-icon-72-precomposed.png">
+                <link rel="apple-touch-icon-precomposed" href="{{ page.dir }}/assets/ico/apple-touch-icon-57-precomposed.png">
+                               <link rel="shortcut icon" href="{{ page.dir }}/img/favicon.png">
 
 <!--
 <script type="text/javascript">
