Setup video base

--- a/docs/_includes/interventions.html
+++ b/docs/_includes/interventions.html
@@ -27,7 +27,7 @@
 						<param name="movie" value="flowplayer-3.2.1.swf" />
 						<param name="allowfullscreen" value="true" />
 						<param name="flashvars"
-							value="config={'clip': {'url': '{{ videoUrl }}/{{ video }}.mp4', 'autoPlay':false, 'autoBuffering':true}}" />
+							value="config={'clip': {'url': '{{ video }}.mp4', 'autoPlay':false, 'autoBuffering':true}}" />
 						<p>
 							Download video as <a href="{{ video }}.mp4">MP4</a> or <a
 								href="{{ video }}.webm">WebM</a>.
