Show full name; fixed #20

--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -44,6 +44,13 @@
                 <a href="{{ page.dir }}/people">People</a>
               </li>
             </ul>
-          </div>
+	    <ul class="nav navbar-nav pull-right">
+	      <?php
+  		if (isset($_SERVER['ADFS_FULLNAME'])) {
+		    echo "<li><a href=\"#\">".$_SERVER['ADFS_FULLNAME']."</a></li>";
+		}
+              ?>
+            </ul>
+	  </div>
         </div>
     </div>
