--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -20,6 +20,9 @@
                 <a href="{{ page.dir }}/equipment">Equipment</a>
               </li>
             -->
+              <li{% if page.slug == "interface" %} class="active"{% endif %}>
+                <a href="/APVS/index.html">Interface</a>
+              </li>
               <li{% if page.slug == "intervention" %} class="active"{% endif %}>
                 <a href="{{ page.dir }}/interventions">Interventions</a>
               </li>
