--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -2,10 +2,10 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="{{ page.dir }}/assets/js/jquery.js"></script>
-<script src="{{ page.dir }}/assets/js/bootstrap.js"></script>
+<script src="{{ page.dir }}/dist/js/bootstrap.js"></script>
 
 <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-<script src="{{ page.dir }}/assets/js/holder/holder.js"></script>
+<script src="{{ page.dir }}/assets/js/holder.js"></script>
 
 <script src="{{ page.dir }}/assets/js/application.js"></script>
 
