--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -12,7 +12,7 @@
 </title>
 
 <!-- Bootstrap core CSS -->
-<link href="{{ page.dir }}/assets/css/bootstrap.css" rel="stylesheet">
+<link href="{{ page.dir }}/dist/css/bootstrap.css" rel="stylesheet">
 <link href="{{ page.dir }}/assets/css/docs.css" rel="stylesheet">
 
 <link href="{{ page.dir }}/css/ATWSS.css" rel="stylesheet">
@@ -24,7 +24,7 @@
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
   <script src="{{ page.dir }}/assets/js/html5shiv.js"></script>
-  <script src="{{ page.dir }}/assets/js/respond/respond.min.js"></script>
+  <script src="{{ page.dir }}/assets/js/respond.min.js"></script>
 <![endif]-->
 
 <!-- Favicons -->
