Moved to BS 3.1

--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -10,7 +10,7 @@
 
           <a class="navbar-brand" href="{{ page.dir }}/index.php"><img src="{{ page.dir }}/img/favicon.png">ATWSS</a>
 
-          <div class="nav-collapse collapse navbar-responsive-collapse">
+          <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
             <!--
               <li{% if page.slug == "introduction" %} class="active"{% endif %}>
