--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -50,7 +50,7 @@
           </div>
         </div>
 --> 
-       <div class="span12">
+       <div class="col-md-12">
           {{ content }}
         </div>
       </div>
