--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -2,10 +2,10 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="dist/js/bootstrap.min.js"></script>
-<script src="assets/js/docs.min.js"></script>
+<script src="{{ page.dir }}/dist/js/bootstrap.min.js"></script>
+<script src="{{ page.dir }}/assets/js/docs.min.js"></script>
 {% if page.slug == "customize" %}
-<script src="assets/js/customize.min.js"></script>
+<script src="{{ page.dir }}/assets/js/customize.min.js"></script>
 {% endif %}
 
 {% comment %}
