--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a class="navbar-brand" href="index.php"><img src="{{ page.dir }}/img/favicon.png">ATWSS</a>
+          <a class="navbar-brand" href="{{ page.dir }}/index.php"><img src="{{ page.dir }}/img/favicon.png">ATWSS</a>
 
           <div class="collapse navbar-collapse collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
