Added group file

--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -48,6 +48,9 @@
               <li{% if page.slug == "people" %} class="active"{% endif %}>
                 <a href="{{ page.dir }}/people">People</a>
               </li>
+              <li{% if page.slug == "group" %} class="active"{% endif %}>
+                <a href="{{ page.dir }}/group">Group <span class="glyphicon glyphicon-lock"></span></a>
+              </li>
             </ul>
 	    <ul class="nav navbar-nav pull-right">
 	      <?php
