--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -12,10 +12,10 @@
 
           <div class="collapse navbar-collapse collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
-            <!--
-              <li{% if page.slug == "introduction" %} class="active"{% endif %}>
-                <a href="{{ page.dir }}/introduction">Introduction</a>
+              <li{% if page.slug == "overview" %} class="active"{% endif %}>
+                <a href="{{ page.dir }}/overview">Overview</a>
               </li>
+<!--
               <li{% if page.slug == "equipment" %} class="active"{% endif %}>
                 <a href="{{ page.dir }}/equipment">Equipment</a>
               </li>
