--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -12,10 +12,9 @@
 </title>
 
 <!-- Bootstrap core CSS -->
-<link href="{{ page.dir }}/dist/css/bootstrap.css" rel="stylesheet">
+<link href="{{ page.dir }}/bootswatch/bootstrap-cyborg.css" rel="stylesheet">
 <link href="{{ page.dir }}/font-awesome/css/font-awesome.css" rel="stylesheet">
 <link href="{{ page.dir }}/assets/css/docs.css" rel="stylesheet">
-
 <link href="{{ page.dir }}/css/ATWSS.css" rel="stylesheet">
 
 {% if page.layout != "example" %}
