--- a/docs/CERN/bootstrap.css
+++ b/docs/CERN/bootstrap.css
@@ -5869,6 +5869,6 @@ legend {
 .affix {
   position: fixed;
 }
-.container .col-md-12 col-md-6 {
+/*.container .col-md-12 col-md-6 {
   margin-bottom:50px;
-}
+}*/
