--- a/docs/CERN/bootstrap.css
+++ b/docs/CERN/bootstrap.css
@@ -736,8 +736,8 @@ pre code {
 .container {
   margin-right: auto;
   margin-left: auto;
-  /*padding-left: 15px;
-  padding-right: 15px;*/
+  padding-left: 15px;
+  padding-right: 15px;
 }
 @media (min-width: 768px) {
   .container {
@@ -754,11 +754,11 @@ pre code {
     width: 1170px;
   }
 }
-.container-fluid {
+/*.container-fluid {
   margin-right: auto;
   margin-left: auto;
   padding-left: 15px;
-  padding-right: 15px;
+  padding-right: 15px;!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 }
 .row {
   margin-left: -15px;
