--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -56,6 +56,25 @@
             			</li>
             		</ul>
 	    		<ul class="nav navbar-nav pull-right">
+	    			<li class="dropdown">
+		                	<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                			CERN <span class="fa fa-caret-down"></b> <span class="fa fa-lock"></span></a>
+                			<ul class="dropdown-menu">
+                  				 <li><a href="#1" data-toggle="tab">About CERN</a></li>
+						<li class="divider"></li>
+						<li><a href="#2" data-toggle="tab">Physics</a></li>
+						<li><a href="#3" data-toggle="tab">Computing</a></li>
+						<li class="divider"></li>
+						<li><a href="#4" data-toggle="tab">How a detector works</a></li>
+						<li><a href="#5" data-toggle="tab">How an accelerator works</a></li>
+						<li class="divider"></li>
+						<li><a href="#6" data-toggle="tab">ALICE</a></li>
+						<li class="divider"></li>
+						<li><a href="#7" data-toggle="tab">CMS</a></li>
+						<li class="divider"></li>
+						<li><a href="#8" data-toggle="tab">LHCb</a></li>
+                			</ul>
+              			</li>
 <!--
 	      <?php
   		if (isset($_SERVER['ADFS_FULLNAME'])) {
