--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -81,6 +81,10 @@
               			<li  >
               				
               			</li>
+              		</ul>
+              		<form class="navbar-form navbar-left">
+      <input class="form-control col-lg-8" placeholder="Search" type="text">
+    </form>
 <!--
 	      <?php
   		if (isset($_SERVER['ADFS_FULLNAME'])) {
@@ -88,7 +92,7 @@
 		}
               ?>
 -->
-            		</ul>
+            	
 	  	</div>
         </div>
     </div>
