--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -1,5 +1,16 @@
 <!-- Navbar
     ================================================== -->
+<html>
+
+  <head>
+    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
+    
+    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    
+</head>
+
+<body>
     <div class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container">
 		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
@@ -96,3 +107,5 @@
 	  	</div>
         </div>
     </div>
+</body>
+</html>
