--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -13,6 +13,7 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container">
+	<ul class="nav nav-tabs">
 		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
             		<span class="icon-bar"></span>
             		<span class="icon-bar"></span>
@@ -94,8 +95,8 @@
               			</li>
               		</ul>
               		<form class="navbar-form navbar-left">
-      <input class="form-control col-lg-8" placeholder="Search" type="text">
-    </form>
+				<input class="form-control col-lg-8" placeholder="Search" type="text">
+			</form>
 <!--
 	      <?php
   		if (isset($_SERVER['ADFS_FULLNAME'])) {
@@ -105,6 +106,8 @@
 -->
             	
 	  	</div>
+        
+        </ul>	
         </div>
     </div>
 </body>
