--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -23,7 +23,7 @@
           	<div class="collapse navbar-collapse collapse" id="navbar-collapse">
             		<ul class="nav navbar-nav">
               			<li{% if page.slug == "overview" %} class="active"{% endif %}>
-                			<a href="{{ page.dir }}/overview">Overview</a>
+                			<a href="{{ page.dir }}/overview">Overview<span class="fa fa-lock"></span></a>
               			</li>
 <!--
               <li{% if page.slug == "equipment" %} class="active"{% endif %}>
