--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -23,7 +23,7 @@
           	<div class="collapse navbar-collapse collapse" id="navbar-collapse">
             		<ul class="nav navbar-nav">
               			<li{% if page.slug == "overview" %} class="active"{% endif %}>
-                			<a href="{{ page.dir }}/overview">Overview<span class="fa fa-lock"></span></a>
+                			<a href="{{ page.dir }}/overview">Overview</a>
               			</li>
 <!--
               <li{% if page.slug == "equipment" %} class="active"{% endif %}>
@@ -36,7 +36,7 @@
               </li>
             -->
 	          		<li{% if page.slug == "interventions" %} class="active"{% endif %}>
-                			<a href="{{ page.dir }}/cern/interventions">Interventions <span class="fa fa-lock"></span></a>
+                			<a href="{{ page.dir }}/cern/interventions">Interventions </a>
               			</li>
               			<li class="dropdown">
 		                	<a class="dropdown-toggle" data-toggle="dropdown" href="#">
