--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -36,11 +36,11 @@
               </li>
             -->
 	          		<li{% if page.slug == "interventions" %} class="active"{% endif %}>
-                			<a href="{{ page.dir }}/cern/interventions">Interventions </a>
+                			<a href="{{ page.dir }}/cern/interventions">Interventions <span class="fa fa-lock"></span></a>
               			</li>
               			<li class="dropdown">
 		                	<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                			Dosimeters <span class="fa fa-caret-down"></b> <span class="fa fa-lock"></span></a>
+                			Dosimeters <span class="fa fa-caret-down"></span> <span class="fa fa-lock"></span></a>
                 			<ul class="dropdown-menu">
                   				<li><a href="{{ page.dir }}/cern/dosimeters">Today (all)</a></li>
 	          				<li class="divider"></li>
