--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -36,7 +36,7 @@
               </li>
             -->
 	          		<li{% if page.slug == "interventions" %} class="active"{% endif %}>
-                			<a href="{{ page.dir }}/cern/interventions">Interventions <span class="fa fa-lock"></span></a>
+                			<a href="{{ page.dir }}/cern/interventions">Interventions</a>
               			</li>
               			<li class="dropdown">
 		                	<a class="dropdown-toggle" data-toggle="dropdown" href="#">
