--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -21,7 +21,7 @@
           	</button>
           	<a class="navbar-brand" href="{{ page.dir }}/index.php"><img src="{{ page.dir }}/img/favicon.png">ATWSS</a>
           	<div class="collapse navbar-collapse collapse" id="navbar-collapse">
-            		<ul class="nav navbar-nav">
+            		<ul class="nav nav-pills">
               			<li{% if page.slug == "overview" %} class="active"{% endif %}>
                 			<a href="{{ page.dir }}/overview">Overview</a>
               			</li>
