--- a/docs/_includes/bootstrap.css
+++ b/docs/_includes/bootstrap.css
@@ -24,10 +24,13 @@ footer,
 header,
 hgroup,
 main,
-nav,
+/*nav,*/
 section,
 summary {
   display: block;
+}
+nav {
+  display: inline;
 }
 audio,
 canvas,
